--- a/biome.json
+++ b/biome.json
@@ -65,7 +65,8 @@
         "noUnusedTemplateLiteral": "error",
         "useNumberNamespace": "error",
         "noInferrableTypes": "error",
-        "noUselessElse": "error"
+        "noUselessElse": "error",
+        "noNonNullAssertion": "off"
       },
       "performance": {
         "noBarrelFile": "off",
