--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "@libsql/client": "0.15.15",
       "libsql": "0.5.22",
       "@trpc/client": "^11.7.2",
-      "drizzle-orm": "^0.45.1"
+      "drizzle-orm": "^0.45.1",
+      "@types/dotenv": "^8.2.3"
     }
   },
   "type": "module",
@@ -34,7 +35,6 @@
     "db:push": "turbo -F @trak/db db:push",
     "db:generate": "turbo -F @trak/db db:generate",
     "deploy": "turbo -F @trak/infra deploy",
-    "deploy:staging": "turbo -F @trak/infra deploy:staging",
     "deploy:prod": "turbo -F @trak/infra deploy:prod",
     "destroy": "turbo -F @trak/infra destroy"
   },
@@ -52,5 +52,8 @@
     "typescript": "catalog:",
     "ultracite": "7.0.12"
   },
-  "packageManager": "bun@1.3.3"
+  "overrides": {
+    "libsodium-wrappers": "^0.8.0"
+  },
+  "packageManager": "bun@1.3.6"
 }
