--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "^11.7.2",
+    "@types/three": "^0.182.0",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,6 +33,7 @@
     "libsql": "catalog:",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.2",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
@@ -39,6 +41,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.2.5",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "catalog:"
