--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,12 @@
     "@libsql/client": "catalog:",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-form": "^1.23.5",
+    "@tanstack/react-pacer": "^0.19.4",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-router": "^1.141.1",
     "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.141.1",
+    "@tanstack/react-virtual": "^3.13.18",
     "@tanstack/router-plugin": "^1.141.1",
     "@trak/api": "workspace:*",
     "@trak/auth": "workspace:*",
