--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev": "turbo dev",
     "build": "turbo build",
     "check-types": "turbo check-types",
+    "check": "oxlint && oxfmt --write",
     "dev:native": "turbo -F native dev",
     "dev:web": "turbo -F web dev",
     "dev:server": "turbo -F server dev",
@@ -44,10 +45,12 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.11",
     "@cloudflare/workers-types": "catalog:",
     "@trak/config": "workspace:*",
     "@types/node": "catalog:",
+    "oxfmt": "^0.31.0",
+    "oxlint": "^1.46.0",
+    "oxlint-tsgolint": "^0.11.5",
     "shadcn": "^3.7.0",
     "turbo": "^2.6.3",
     "typescript": "catalog:",
