feat: bank account

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,6 +17,7 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "dotenv": "catalog:",
+    "superjson": "^2.2.6",
     "zod": "catalog:"
   },
   "devDependencies": {
