--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.2.3",
     "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
+    "superjson": "^2.2.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.3",
     "three": "^0.182.0",
